Added table for good demon archetypes
- Added missing </li> tag to line 354

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <li><b>Magical </b>
                                 <ul>
                                     <li> Primary = MATK % </li>
-                                    <li> Tertiaries = MATK %, HP%, Evasion %
+                                    <li> Tertiaries = MATK %, HP%, Evasion % </li>
                                     <li>Spell / Ward OR Divine / Ward</li>
                                 </ul>
                             </li>
@@ -366,6 +366,36 @@
                             </li>
                         </ul>
                     </li>
+                    <li><strong> Good archetypes for demons: </strong>
+                      <table>
+                        <tbody>
+                          <tr>
+                              <td>Common</td>
+                              <td>Seth, Metatron, Susano-o, Izanami </td>
+                          </tr>
+                          <tr>
+                              <td>Aragami (Red)</td>
+                              <td>Shiva, Vishnu, Zaou Gongen, Izanami, Nergal</td>
+                          </tr>
+                          <tr>
+                              <td>Protector (Yellow)</td>
+                              <td>Amaterasu, Michael, Huang Long, Ishtar, Black Frost, Garuda, Izanami, Yoshitsune, Rama, Mother Harlot, Mot, 
+                                  Nergal, Orcus</td>
+                          </tr>
+                          <tr>
+                              <td>Psychic (Purple)</td>
+                              <td>Lucifer, Mara, Huang Long, Samael, Ananta, Surt, Thor, Asherah, Mastema, Cu Chulainn, Garuda, Lakshmi, 
+                                  Izanami, Yoshitsune, Huang Di, Rama, Siegfried, Mother Harlot, Trumpeter, Alice, Mot, Ixtab</td>
+                          </tr>
+                          <tr>
+                              <td>Elementalist (Teal)</td>
+                              <td>Lilith, Quetzalcoatl, Ishtar, Amaterasu, Mastema, Asherah, Seth, Shiva, Barong, Susano-o, Yoshitsune, 
+                                  Huang Di, Siegfried, Jeanne d'Arc, Mother Harlot, Alice, Mot, Ixtab</td>
+                          </tr>
+                      </tbody>
+                    </table>
+                  </li>
+
                     <li>Ctrl + F + [demon name] to find the demon you want, it's ordered by grade.</li>
                     <li>The order which I listed the archetypes is not indicative that x archetype is better than y
                         archetype. People would have their preferences anyways so take this as a guide, 
