Updated table to use inline css
- Added border to table
- Updated archetype labels to have color and be bolded.

--- a/index.html
+++ b/index.html
@@ -367,28 +367,28 @@
                         </ul>
                     </li>
                     <li><strong> Good archetypes for demons: </strong>
-                      <table>
+                      <table border = "1">
                         <tbody>
                           <tr>
                               <td>Common</td>
                               <td>Seth, Metatron, Susano-o, Izanami </td>
                           </tr>
                           <tr>
-                              <td>Aragami (Red)</td>
+                              <td style="color:red;"> <b>Aragami</b></td>
                               <td>Shiva, Vishnu, Zaou Gongen, Izanami, Nergal</td>
                           </tr>
                           <tr>
-                              <td>Protector (Yellow)</td>
+                              <td style="color:orange;"><b> Protector </b></td>
                               <td>Amaterasu, Michael, Huang Long, Ishtar, Black Frost, Garuda, Izanami, Yoshitsune, Rama, Mother Harlot, Mot, 
                                   Nergal, Orcus</td>
                           </tr>
                           <tr>
-                              <td>Psychic (Purple)</td>
+                              <td style="color:purple;"> <b>Psychic</b></td>
                               <td>Lucifer, Mara, Huang Long, Samael, Ananta, Surt, Thor, Asherah, Mastema, Cu Chulainn, Garuda, Lakshmi, 
                                   Izanami, Yoshitsune, Huang Di, Rama, Siegfried, Mother Harlot, Trumpeter, Alice, Mot, Ixtab</td>
                           </tr>
                           <tr>
-                              <td>Elementalist (Teal)</td>
+                              <td style="color:teal;"> <b>Elementalist</b></td>
                               <td>Lilith, Quetzalcoatl, Ishtar, Amaterasu, Mastema, Asherah, Seth, Shiva, Barong, Susano-o, Yoshitsune, 
                                   Huang Di, Siegfried, Jeanne d'Arc, Mother Harlot, Alice, Mot, Ixtab</td>
                           </tr>
