--- a/index.html
+++ b/index.html
@@ -367,34 +367,41 @@
                         </ul>
                     </li>
                     <li><strong> Good archetypes for demons: </strong>
-                      <table border = "1">
+                      <table border = "2">
                         <tbody>
+                          <tr> 
+                            <td> <b> Archetype </b> </td>
+                            <td> <b> Fusable demons </b> </td>
+                            <td> <b> Gacha demons </b> </td>
+                          </tr>
                           <tr>
                               <td>Common</td>
                               <td>Seth, Metatron, Susano-o, Izanami </td>
+                              <td> N/A</td>
                           </tr>
                           <tr>
-                              <td style="color:red;"> <b>Aragami</b></td>
-                              <td>Shiva, Vishnu, Zaou Gongen, Izanami, Nergal</td>
+                              <td style="color:red;"> <b> Aragami<b></td>
+                              <td>Shiva, Vishnu, Zaou Gongen, Izanami</td>
+                              <td>Nergal</td>
                           </tr>
                           <tr>
-                              <td style="color:orange;"><b> Protector </b></td>
-                              <td>Amaterasu, Michael, Huang Long, Ishtar, Black Frost, Garuda, Izanami, Yoshitsune, Rama, Mother Harlot, Mot, 
-                                  Nergal, Orcus</td>
+                            <td style="color:orange;"><b>Protector</b></td>
+                              <td>Amaterasu, Michael, Huang Long, Ishtar, Black Frost, Garuda, Izanami </td>
+                              <td>Yoshitsune, Rama, Mother Harlot, Mot, Nergal, Orcus</td>
                           </tr>
                           <tr>
-                              <td style="color:purple;"> <b>Psychic</b></td>
-                              <td>Lucifer, Mara, Huang Long, Samael, Ananta, Surt, Thor, Asherah, Mastema, Cu Chulainn, Garuda, Lakshmi, 
-                                  Izanami, Yoshitsune, Huang Di, Rama, Siegfried, Mother Harlot, Trumpeter, Alice, Mot, Ixtab</td>
+                            <td style="color:purple;"> <b>Psychic </b></td>
+                            <td> Lucifer, Mara, Huang Long, Samael, Ananta, Surt, Thor, Asherah, Mastema, Cu Chulainn, Garuda, Lakshmi, Izanami, </td>
+                            <td> Yoshitsune, Huang Di, Rama, Siegfried, Mother Harlot, Trumpeter, Alice, Mot, Ixtab </td>
                           </tr>
                           <tr>
-                              <td style="color:teal;"> <b>Elementalist</b></td>
-                              <td>Lilith, Quetzalcoatl, Ishtar, Amaterasu, Mastema, Asherah, Seth, Shiva, Barong, Susano-o, Yoshitsune, 
-                                  Huang Di, Siegfried, Jeanne d'Arc, Mother Harlot, Alice, Mot, Ixtab</td>
+                            <td style="color:teal;"> <b> Elementalist </b></td>
+                            <td> Lilith, Quetzalcoatl, Ishtar, Amaterasu, Mastema, Asherah, Seth, Shiva, Barong, Susano-o </td>
+                             <td> Yoshitsune, Huang Di, Siegfried, Jeanne d'Arc, Mother Harlot, Alice, Mot, Ixtab </td>
                           </tr>
-                      </tbody>
-                    </table>
-                  </li>
+                        </tbody>
+                      </table>
+                    </li>
 
                     <li>Ctrl + F + [demon name] to find the demon you want, it's ordered by grade.</li>
                     <li>The order which I listed the archetypes is not indicative that x archetype is better than y
