Css update for archetypes table
- Bolded common label
- Updated css

--- a/index.html
+++ b/index.html
@@ -366,8 +366,19 @@
                             </li>
                         </ul>
                     </li>
+                    
+                    <!-- Custom css for table below only -->
+                    <style>
+                      #GoodArchetypes td {
+                        border: 2px solid #dddddd;
+                        text-align: center;
+                        padding: 8px;
+                      }
+                    </style>
+                    
+                    <div id="GoodArchetypes">
                     <li><strong> Good archetypes for demons: </strong>
-                      <table border = "2">
+                      <table>
                         <tbody>
                           <tr> 
                             <td> <b> Archetype </b> </td>
@@ -375,7 +386,7 @@
                             <td> <b> Gacha demons </b> </td>
                           </tr>
                           <tr>
-                              <td>Common</td>
+                              <td><b>Common</b></td>
                               <td>Seth, Metatron, Susano-o, Izanami </td>
                               <td> N/A</td>
                           </tr>
@@ -402,6 +413,7 @@
                         </tbody>
                       </table>
                     </li>
+                    </div>
 
                     <li>Ctrl + F + [demon name] to find the demon you want, it's ordered by grade.</li>
                     <li>The order which I listed the archetypes is not indicative that x archetype is better than y
