Updated archetype table
- Removed Jeanne d'Arc. Intention for now is that the guide is only for 5* demons

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                           <tr>
                             <td style="color:teal;"> <b> Elementalist </b></td>
                             <td> Lilith, Quetzalcoatl, Ishtar, Amaterasu, Mastema, Asherah, Seth, Shiva, Barong, Susano-o </td>
-                             <td> Yoshitsune, Huang Di, Siegfried, Jeanne d'Arc, Mother Harlot, Alice, Mot, Ixtab </td>
+                             <td> Yoshitsune, Huang Di, Siegfried, Mother Harlot, Alice, Mot, Ixtab </td>
                           </tr>
                         </tbody>
                       </table>
