Writeup: Corrected Ixtab
- Supposed to be 4 dot points in total, only three were listed (two combined into one).

--- a/index.html
+++ b/index.html
@@ -1040,13 +1040,12 @@
                     <ul>
                         <li>There are counters to her ability if you ever see her on defense teams:
                             <ul>
-                                <li>Kill all other demons and leave her last Use Huang Long to repel almighty attacks,
-                                    this blocks her ability.</li>
+                                <li>Kill all other demons and leave her last. </li>
+                                <li> Use Huang Long's special ability: 5 elements as this repels almighty attacks, blocking her ability.</li>
                                 <li>Use ailments on her/her team. Poison can kill her without worry of her passive,
                                     charm can force her allies to kill her.</li>
                                 <li>Bring Reiko as you'd probably expect them to use Recarm a lot. This will ensure
-                                    Ixtab's
-                                    ability only activates once as she should be easily killable</li>
+                                    Ixtab's ability only activates once as she should be easily killable </li>
                             </ul>
                         </li>
                     </ul>
