Test Table of Contents

--- a/index.html
+++ b/index.html
@@ -446,7 +446,12 @@
                         rather than a "You have to go with this one!!! kind of thing"
                         and then pick whichever one you like.</li>
                 </ul>
-                
+
+                <b-card>
+                    <p><strong>Table of Contents TEST</strong></p>
+                    <a href="#Yoshitsune">Yoshitsune</a>
+                </b-card>
+                    
                 <b-card>
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Metatron')">[Metatron]</a> </strong></p>
                     <p>Highest grade demon with the unique skill Fire Of Sinai (FoS). FoS hits really hard with
@@ -610,7 +615,7 @@
                     <p><strong>Brands:</strong> Divine Type for spellcaster Support Type for well support.</p>
                 </b-card>
                 <b-card>
-                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Yoshitsune')">Yoshitsune</a></strong></p>
+                    <p><strong><a id="Yoshitsune" href="javascript:void(0)" @click="show_guide_devil('Yoshitsune')">Yoshitsune</a></strong></p>
                     <p>He is immune to light and dark, resistant to phys attacks, has high strength, good agility
                         and
                         decent (buffed recently) luck. He comes with the unique skill Hassou Tobi (8x random hits
