Yoshi Guide Update

--- a/index.html
+++ b/index.html
@@ -705,38 +705,44 @@
                         include Vorpal Blade and Mana Aid, making him amazing in PVE and PVP. Mana Aid allows him
                         to
                         recover full MP each wave so he can sweep and repeat with Vorpal Blade or Hassou Tobi.</p>
-                    <p><strong>Best Archetype(s):</strong></p>
-                    <ul>
-                        <li>All archetypes are usable and good. Regardless of what you get there really shouldn't
-                            be
-                            any issues at all. Changing archetype for him is just changing preference depending on
-                            how
-                            you'd like to use him.</li>
-                        <li>Purple (Phys Amp + Savage Glee). Makes him hit really hard, ripping the enemies to
-                            shreds.
-                            Savage Glee would add onto his crit rate meaning it'll be quite likely in you getting
-                            another turn.</li>
-                        <li>Teal (Drain Phys + Resist Ice). With drain phys you don't have to worry about repelled
-                            damage, greatly adding to his survivability. Resist Ice can be replaced as he doesn't
-                            have
-                            an ice weakness.</li>
-                        <li>Yellow (Charge + Auto-Sukuka). For the sole purpose of ramping up your damage even
-                            further,
-                            a 5mp charge coupled with Templar Dragon's passive would hit really hard.</li>
-                        <li>Red (Gigantomachia + God's Hand), has a niche use as
-                            the
-                            best outcome to use it is dependant on getting Phys Amp and whether you'd want your
-                            Yoshi
-                            to be maxed out for aoe. Gigantomachia is essentially the upgrade of Vorpal Blade (as
-                            it is
-                            the strongest phys aoe in the game) and in getting this archetype its recommended to
-                            run it
-                            with the HellBiker/Zaou Gongen setup. Assuming you have Phys Boost and have Phys Amp
-                            from
-                            skill gacha, he'd be able to do some heavy sweeping. This is pretty rare as you'd be
-                            giving
-                            up on Charge (and that coupled with Hassou Tobi can be really powerful).</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                            <p><table>
+                              <tbody>
+                                <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                    <td><b></b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                    <td><b>Gigantomachia & God's Hand</b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                    <td><b>Charge</b> allows you to ramp up your damage even
+                                        further, a 5mp charge coupled with Templar Dragon's passive would hit really hard.
+                                    <br><b>Auto-Sukuka</b> is a decent auto buff that increases your accuracy and evasion, allowing you
+                                    to hit phys attacks more often and dodge more often.
+                                    </td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                    <td><b>Phys Amp</b> makes him hit really hard, ripping the enemies to
+                                        shreds. <br>
+                                        <b>Savage Glee</b> would add onto his crit rate meaning it'll be quite likely in you getting
+                                        another turn.</td>
+                                    <td><b></b></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                    <td><b>Drain Phys</b> allows you to not have to worry about repelled
+                                        Phys damage, greatly adding to his survivability. <br>
+                                        <b>Resist Ice</b>can be replaced as he doesn't
+                                        have
+                                        an ice weakness.</td>
+                                    <td></td>
+                                </tr>
+                              </tbody>
+                            </table></p>
+                          </div>
+    
                     <p><strong> Recommended skills: </strong></p>
                     <ul>
                         <li>Phys Boost/Amp. Give him more power.</li>
