--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                                 </tr>
                                 <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
                                     <td><b>Charge</b> allows you to ramp up your damage even
-                                        further, a 5mp charge coupled with Templar Dragon's passive would hit really hard.
+                                        further; a 5mp charge coupled with Templar Dragon's passive would hit really hard.
                                     <br><b>Auto-Sukuka</b> is a decent auto buff that increases your accuracy and evasion, allowing you
                                     to hit phys attacks more often and dodge more often.
                                     </td>
@@ -734,7 +734,7 @@
                                 <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
                                     <td><b>Drain Phys</b> allows you to not have to worry about repelled
                                         Phys damage, greatly adding to his survivability. <br>
-                                        <b>Resist Ice</b>can be replaced as he doesn't
+                                        <b>Resist Ice</b> can be replaced as he doesn't
                                         have
                                         an ice weakness.</td>
                                     <td></td>
