Mother Harlot Guide + Template

--- a/index.html
+++ b/index.html
@@ -658,8 +658,8 @@
                               <td></td>
                           </tr>
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                              <td><b></b>
                               <td><b></b></td>
+                              <td></td>
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
                               <td><b></b></td>
@@ -713,7 +713,9 @@
                                     <td></td>
                                 </tr>
                                 <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                    <td><b>Gigantomachia & God's Hand</b></td>
+                                    <td><b>Gigantomachia</b>
+                                    <br>
+                                <b>God's Hand</b></td>
                                     <td></td>
                                 </tr>
                                 <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
@@ -766,27 +768,46 @@
                         setup you can rob them of all their mana and when its their turn they'd be unable to
                         counter
                         attack.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Debilitate + Infernal Mask). Makes her also able to support your party (Though
-                            you
-                            still should be spamming Babylon Goblet when you can) through the best debuff in the
-                            game.
-                            Infernal Mask means you don't really have to run Ward, given she naturally also has
-                            pretty
-                            high luck she's really unlikely to be hit by ailments.</li>
-                        <li>Purple (Deadly Charm + Insanity). Stacking with her passive both passives would ensure
-                            you
-                            do a lot more damage to charmed enemies and increase her chance to inflict charm at the
-                            start.</li>
-                        <li>Teal (Drain Phys + Makara Shift). Only for when you have Rama with you (since she has
-                            Drain
-                            Elec as well), she can stop heavy piercing phys hitters and Thor from from sweeping
-                            you.
-                            Naturally she has Null Phys so she can stop a lot of phys users. Makara Shift is nice
-                            in
-                            playing defensively when you start second in pvp.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                            <p><table>
+                              <tbody>
+                                <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                    <td><b></b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                    <td><b>Deathtouch</b><br><b>Tetra Shift</b></td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                    <td><b>Debilitate</b> makes her also able to support your party (Though
+                                        you
+                                        still should be spamming Babylon Goblet when you can) through the best debuff in the
+                                        game.
+                                    <br>
+                                <b>Infernal Mask</b> means you don't really have to run Ward, given she naturally also has
+                                pretty</td>
+                                    <td></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                    <td>Stacking <b>Deadly Charm</b> with her passive, will allow you
+                                        do a lot more damage to charmed enemies
+                                    <br>
+                                <b>Insanity</b> will increase her chances of charming enemies in general</td>
+                                    <td><b></b></td>
+                                </tr>
+                                <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                    <td><b>Drain Phys</b> is useful when you have Rama with you (since she has
+                                        Drain
+                                        Elec as well), she can stop heavy piercing phys hitters and Thor from from sweeping
+                                        you.
+                                    <br> Naturally she has Null Phys so she can stop a lot of phys users. <b>
+                                        Makara Shift</b> is nice in playing defensively when you start second in pvp. </td>
+                                    <td></td>
+                                </tr>
+                              </tbody>
+                            </table></p>
+                          </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Force. She has a weakness that should be covered.</li>
