Trumpeter Guide Update

--- a/index.html
+++ b/index.html
@@ -841,20 +841,40 @@
                         they'd waste press turns waiting for mute to go away, this would also shut down healers if
                         you
                         get rid of Ward via barrier break.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Red and Yellow gives him decent skills too but i believe you'd want to spam Apocalypse
-                            regardless due to its damage and ability to inflict mute.</li>
-                        <li>Red (Judgement + Evade), Judgement would boost your damage though it'd be better just
-                            using
-                            Tarukaja/having another demon cast it.</li>
-                        <li>Yellow (Demon Birth Cry + Auto Tarunda) helps more defensively but as the same reason
-                            as
-                            before you'd want to use Apocalypse to do damage and shut down the enemy team. Purple
-                            (Auto-Rakuga). Gives you a defensive head start, good for keeping him and your team
-                            alive
-                            and kicking.</li>
-                    </ul>
+
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Judgement</b> would boost your damage though it'd be better just
+                                            using
+                                            Tarukaja/having another demon cast it.<br><b>Evade</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Demon Birth Cry</b> helps more defensively but as the same reason
+                                            as
+                                            before you'd want to use Apocalypse to do damage and shut down the enemy team. 
+                                            <br><b>Auto-Tarunda</b> gives you a defensive head start, good for keeping him and your team
+                                            alive
+                                            and kicking.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Auto-Rakuga</b><br><b>Trisagion</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Resist Phys</b><br><b>Resist Fire</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Insanity/Madness. Increasing his chance of inflicting mute</li>
