Shiva Guide Update

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                                     <td>Stacking <b>Deadly Charm</b> with her passive, will allow you
                                         do a lot more damage to charmed enemies
                                     <br>
-                                <b>Insanity</b> will increase her chances of charming enemies in general</td>
+                                <b>Insanity</b> will increase her chances of charming enemies overall</td>
                                     <td><b></b></td>
                                 </tr>
                                 <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
@@ -896,17 +896,35 @@
                         too), effectively reducing its cost down to 6). He comes with Serial Killer, a weaker
                         version
                         of Butcher but still is useful in boosting his Vorpal Blade/Pralaya damage regardless.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Teal (Drain Ice). This covers his weakness and gives him drain fire, ice and elec. He'd
-                            be
-                            healed up by 3 elements which is quite amazing. Pair him with Rama and you can't be
-                            swept
-                            by those elements at all.</li>
-                        <li>Red (God's Hand). Give's him a really powerful single target skill, in the cases where
-                            you
-                            can't sweep and want to set your sights onto a single demon.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Null Charm</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>God's Hand</b> is a really powerful single target skill, in the cases where
+                                            you can't sweep and want to set your sights onto a single demon.</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Rebellion</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Evade</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Drain Ice</b> covers his weakness and gives him drain fire, ice and elec. He'd
+                                            be healed up by 3 elements which is quite amazing. Pair him with Rama and you can't be
+                                            swept</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Ice. If you don't get Teal.</li>
