Mot Guide Update

--- a/index.html
+++ b/index.html
@@ -951,24 +951,37 @@
                         10
                         turns to reach 50%. This is unlikely to be reached in pvp but in pve content such as Kiwami
                         this can prove quite useful depending on who you go up against.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple (Life Surge + Enduring Soul). This further enhances his survivability, as said
-                            before you'd want him to stay alive to grant your team an extra turn icon and as a
-                            bonus do
-                            more damage with him.</li>
-                        <li>Yellow (Judgement + Auto Rakuga). With Judgement he can enhance his support skills with
-                            an
-                            aoe that does damage and grants the party tarukaja. Auto-Rakuga is always nice to boost
-                            up
-                            your defence without having to spend a turn casting Rakukaja. He's actually attack AI
-                            so
-                            sadly he won't take advantage of skills like Fog/Acid Breath and War Cry</li>
-                        <li>Teal (Null Phys + Resist Elec). His weakness is covered by Resist Elec whilst Null Phys
-                            prevents a majority of phys demons from doing damage to you (unless they're with
-                            HB/ZG).
-                            This can be useful for pvp but I'd say moreso for pve.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b></b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Deathtouch</b><br><b>Magic Amp III</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td>With <b>Judgement</b> he can enhance his support skills with
+                                            an aoe that does damage and grants the party tarukaja.
+                                            <br><b>Auto-Rakuga</b> is always nice to boost
+                                            up your defence without having to spend a turn casting Rakukaja. He's actually attack AI
+                                            so sadly he won't take advantage of skills like Fog/Acid Breath and War Cry</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Life Surge</b><br><b>Enduring Soul</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Phys</b> prevents a majority of phys demons from doing damage to you (unless they're with
+                                            HB/ZG). This can be useful for pvp but I'd say moreso for pve.<br><b>Resist Elec</b> covers his weakness</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended Skills: </strong></p>
                     <ul>
                         <li>Resist Elec. Since the intention is that he'd survive as long as possible, his weakness
