Michael and Mara Guide Update

--- a/index.html
+++ b/index.html
@@ -1005,13 +1005,34 @@
                     <p>Magic oriented demon (even though he has both equal magic and strength). Has the unique
                         skill Soul Judgement which makes him a really good demon for Sloth 10 and Megidolaon for
                         general sweeping.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Yellow (Mediarahan). Due to his high magic he can be quite an effective healer (though
-                            only for manual play as his AI is Attack type).</li>
-                        <li>Teal (Repel Dark). Covers his weakness and when paired with Alilat you can ignore Black
-                            Frost's Go To Hell skill.</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Endure</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Thunderclap</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Mediarahan</b> can make him an effective healer due to his high magic
+                                        (thouch only for manual play because his AI is Attack type)</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Infernal Mask</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Repel Dark</b> covers his weakness and when paired with Alilat you can ignore Black
+                                            Frost's Go To Hell skill.</td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Dark. If not Teal to cover his weakness.</li>
@@ -1028,12 +1049,32 @@
                         demon in the game with Phys Pierce (Huang Di has it too but is gacha only) and so like the
                         other pierce users in the game, Purple is his best archetype. He also comes with Null Bind
                         (meh) and Titanomachia for sweeping so enemies will fall quite quickly to him.</p>
-                    <p><strong>Best Archetype(s): </strong></p>
-                    <ul>
-                        <li>Purple (Phys Pierce). Self explanatory, enemies cannot resist the might of Mara
-                            (&gt;-&lt;)
-                            as he goes right through his defenses...</li>
-                    </ul>
+                        <div id="DemonGuideTable">
+                                <p><table>
+                                  <tbody>
+                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                                        <td><b>Megaton Raid</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                                        <td><b>Soul Drain</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                                        <td><b>Charge</b></td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                                        <td><b>Phys Pierce</b> means enemies cannot resist the might of Mara</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                                        <td><b>Null Ice</b></td>
+                                        <td></td>
+                                    </tr>
+                                  </tbody>
+                                </table></p>
+                              </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Ice. Gotta cover his weakness up.</li>
